<resources>
    <string name="app_name">ME Monitoring</string>
    <string name="foto_sto">Foto STO</string>
    <string name="kondisi_umum">Kondisi Umum</string>
    <string name="pompa_air">Pompa Air</string>
    <string name="cuaca">Cuaca</string>
    <string name="cerah">Cerah</string>
    <string name="mendung">Mendung</string>
    <string name="hujan">Hujan</string>
    <string name="genangan_air">Genangan Air</string>
    <string name="ada">Ada</string>
    <string name="tidak_ada">Tidak Ada</string>
    <string name="simpan">Simpan</string>
    <string name="birsuhu">BIR &amp; Suhu</string>
    <string name="main_menu">Menu Utama</string>
    <string name="catatan">Catatan</string>
    <string name="suhu_ruangan">Suhu Ruangan</string>
    <string name="bbm">BBM</string>
    <string name="catuan">Catuan</string>
    <string name="foto_bir">Foto BIR</string>
    <string name="persent">%</string>
    <string name="baik">Baik</string>
    <string name="tidak_baik">Tidak Baik</string>
    <string name="ruang_genset">Ruang Genset</string>
    <string name="pln">PLN</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="genset">Genset</string>
    <string name="foto_meter_bahan_bakar">Foto Meter BBM</string>
    <string name="hint_number">0</string>
    <string name="celcius">°C</string>
    <string name="tanki_bulanan">Tanki Bulanan</string>
    <string name="r_sentral">R. Sentral</string>
    <string name="r_transmisi">R. Transmisi</string>
    <string name="r_rectifier">R. Rectifier</string>
    <string name="r_batere">R. Batere</string>
    <string name="r_akses_gpon">R. Akses / GPON</string>
    <string name="r_genset">R. Genset</string>
    <string name="ruang_sentral">Ruang Sentral</string>
    <string name="benda_mudah_terbakar">Benda Mudah Terbakar</string>
    <string name="steker_bertumpuk">Steker Bertumpuk</string>
    <string name="foto_ruangan">Foto Ruangan</string>
    <string name="ruang_transmisi">Ruang Transmisi</string>
    <string name="ruang_rectifier">Ruang Rectifier</string>
    <string name="ruang_batere">Ruang Batere</string>
    <string name="cerceran_oli">Ceceran Oli</string>
    <string name="ruang_akses_gpon">Ruang Akses / GPON</string>
    <string name="welcome_text">Selamat Datang</string>
    <string name="pilih_shift">Pilih Shift</string>
    <string name="nama">Nama</string>
    <string name="handphone">0822xxxxxx</string>
    <string name="isialamat">Mencoba untuk menulis sangat panjang agar terlihat hasil yang maksimal jika sepanjang apa yang bisa saya buatkan disini?</string>
    <string name="shift_pagi">Shift Pagi</string>
    <string name="shift_malam">Shift Malam</string>
    <string name="profile_image">profile_image</string>
    <string name="sto_smg">STO Semarang</string>
    <string name="sentral">Sentral</string>
    <string name="rectifier">RECTIFIER</string>
    <string name="transmisi">Transmisi</string>
    <string name="batere">BATERE</string>
    <string name="akses_gpon">AKSES/GPON</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Masuk</string>
    <string name="telkomsemarang">Telkom Semarang</string>
    <string name="pagi">Pagi</string>
    <string name="malam">Malam</string>
    <string name="dashboard_sto">Dashboard STO</string>
    <string name="tanggal">Selasa, 30 September 2019</string>
    <string name="report">Laporan</string>
    <string name="value">:</string>
    <string name="laporan_kosong">Laporan Kosong</string>
    <string name="ruang_akses">Ruang Akses</string>
    <string name="menu_admin">Menu Admin User</string>
    <string name="create">Buat</string>
    <string name="update">Ubah</string>
    <string name="reset_password">Reset Password</string>
    <string name="keluar">Keluar</string>
    <string name="create_user">Tambah Petugas</string>
    <string name="foto">Foto</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="no_hp">No HP</string>
    <string name="witel">Witel</string>
    <string name="sto">STO</string>
    <string name="home">Beranda</string>
    <string name="nama_user">Nama User</string>
    <string name="konfirm">Konfirmasi</string>
    <string name="konfirm_password">Konfirm Password</string>
    <string name="back">Kembali</string>
    <string name="update_user">Ubah Data Petugas</string>
    <string name="info">Informasi Petugas</string>
    <string name="delete">Hapus</string>
    <string name="pendaftaran">*Hubungi administrator untuk pendaftaran user baru</string>
    <string name="favo">Favo Perdana Hadiyanto Saputra</string>
    <string name="no_hp2">089624971331</string>
    <string name="semarang">Semarang</string>
    <string name="simpang_lima">Simpang Lima</string>
    <string name="favophs">favophs</string>
    <string name="password2">123456</string>
    <string name="reset">Reset</string>
    <string name="old_password">Password Lama</string>
    <string name="new_password">Password Baru</string>
    <string name="hubungi_petugas">Hubungi Petugas</string>
    <string name="bir_ruang_sentral">BIR-Ruang Sentral</string>
    <string name="bir_ruang_transmisi">BIR-Ruang Transmisi</string>
    <string name="bir_ruang_rectifier">BIR-Ruang Rectifier</string>
    <string name="bir_ruang_batere_kering">BIR-Ruang Batere Kering</string>
    <string name="bir_ruang_batere_basah">BIR-Ruang Batere Basah</string>
    <string name="bir_ruang_akses_gpon">BIR-Ruang Akses/GPON</string>
    <string name="bir_ruang_genset">BIR-Ruang Genset</string>
    <string name="history_laporan_sto">Riwayat Laporan STO</string>
    <string name="date">Tanggal</string>
    <string name="dateValue">01/01/2019</string>
    <string name="lihat">Lihat</string>
    <string name="info_petugas">INFO PETUGAS</string>
    <string name="petugas_sto">Petugas Sto</string>
    <string name="nama_petugas">Nama Petugas</string>
    <string name="no_handphone">No Handphone</string>
    <string name="handphone_petugas">Handphone Petugas</string>
    <string name="nama_witel">Nama Witel</string>
    <string name="foto_petugas">Foto Petugas</string>
    <string name="history">Riwayat</string>
    <string name="whatsapp_icon">Whatsapp Icon</string>
    <string name="smg">SMG</string>
    <string name="dash">-</string>
    <string name="shift">Shift</string>
    <string name="kontak_penting">Kontak Penting</string>
    <string name="kapasitas">Kapasitas Tanki BBM</string>
    <string name="foto_temperature">Foto Temperatur</string>
    <string name="liter">Liter</string>
    <string name="sto_simpang">STO Simpang Lima</string>
    <string name="update_kontak">Ubah Kontak</string>
    <string name="sto_monitor">STO Monitor</string>
    <string name="powered_by_telkom">Powered By Telkom Indonesia</string>
    <string name="alamat">Alamat</string>
    <string name="kondisi_sto">Kondisi STO</string>
    <string name="nama_kontak">Nama Kontak</string>
    <string name="sisa_bbm">Sisa BBM</string>
    <string name="peringatan_tanki">Peringatan Tanki</string>
    <string name="memon">MEMON</string>
    <string name="mechanical_electronical_monitoring">Mechanical Electronical Monitoring</string>
    <string name="edit_petugas">Edit Profile</string>
    <string name="validasi_laporan">Validasi Laporan</string>
    <string name="verifikasi_laporan">Verifikasi Laporan</string>
    <string name="tidak_ada_laporan_terbaru">TIDAK ADA LAPORAN TERBARU!</string>
    <string name="perhatian">Perhatian!</string>
    <string name="xmark">X</string>
    <string name="hubungi_pic">Hubungi PIC</string>
    <string name="validasi_langsung">Validasi Langsung</string>
    <string name="kondisi_anomali_text">Masih terdapat kondisi anomali! Segera hubungi rekan PIC terkait</string>
    <string name="view_verifikasi_laporan">View Verifikasi Laporan</string>
    <string name="waktu">08:25:58</string>
    <string name="view">View</string>
    <string name="edit_password">Edit Password</string>
    <string name="olo">OLO</string>
    <string name="batere_kering">Batere\nKering</string>
    <string name="batere_basah">Batere\nBasah</string>
    <string name="bir_ruang_olo">BIR-Ruang OLO</string>
    <string name="ruang_olo">Ruang OLO</string>
    <string name="tambah_catatan">Tambah Catatan</string>
    <string name="catatan_kosong">Catatan Kosong</string>
    <string name="catatan_petugas">Catatan Petugas</string>
    <string name="catatan_validator">Catatan Validator</string>
    <string name="catatan_manager">Catatan Manager</string>
    <string name="belum_validasi">Belum Validasi</string>
    <string name="sudah_validasi">Sudah Validasi</string>
    <string name="pilih_ruangan">Pilih Ruangan</string>
</resources>
