<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorGreyLight"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="2dp"
    app:cardElevation="2dp"
    app:cardCornerRadius="5dp"
    app:cardPreventCornerOverlap="false"
    app:contentPadding="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_8sdp">

        <TextView
            android:id="@+id/txtNamaUser"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_21sdp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/_4sdp"
            android:text="@string/nama_user"
            android:textColor="@color/blacket"
            android:textSize="@dimen/_13ssp"
            android:maxLines="1"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/txtUsername"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_21sdp"
            android:layout_below="@id/txtNamaUser"
            android:layout_marginStart="@dimen/_4sdp"
            android:text="@string/username"
            android:textSize="@dimen/_12ssp" />

        <ImageButton
            android:id="@+id/btnInfo"
            android:layout_width="@dimen/_26sdp"
            android:layout_height="@dimen/_26sdp"
            android:contentDescription="@string/info"
            android:layout_centerInParent="true"
            android:background="@drawable/ic_info"
            android:layout_toEndOf="@id/txtNamaUser" />

        <ImageButton
            android:id="@+id/btnUpdate"
            android:layout_width="@dimen/_26sdp"
            android:layout_height="@dimen/_26sdp"
            android:contentDescription="@string/update"
            android:layout_centerInParent="true"
            android:background="@drawable/ic_edit"
            android:layout_toEndOf="@id/btnInfo"
            android:layout_marginStart="@dimen/_8sdp"/>

        <ImageButton
            android:id="@+id/btnDelete"
            android:layout_width="@dimen/_26sdp"
            android:layout_height="@dimen/_26sdp"
            android:contentDescription="@string/delete"
            android:layout_centerInParent="true"
            android:background="@drawable/ic_delete"
            android:layout_toEndOf="@id/btnUpdate"
            android:layout_marginStart="@dimen/_8sdp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>