<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorGreyLight"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="2dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="10dp"
    app:cardPreventCornerOverlap="false"
    app:contentPadding="0dp">

    <RelativeLayout
        android:id="@+id/kontakWrap"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_8sdp">

        <TextView
            android:id="@+id/txtWitel"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_21sdp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/_4sdp"
            android:text="@string/witel"
            android:textColor="@color/blacket"
            android:textStyle="bold"
            android:textSize="@dimen/_15ssp"
            android:maxLines="1"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/txtNama"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_21sdp"
            android:layout_below="@id/txtWitel"
            android:layout_marginStart="@dimen/_4sdp"
            android:text="@string/nama_user"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:id="@+id/txtHandphone"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_21sdp"
            android:layout_below="@id/txtNama"
            android:layout_marginStart="@dimen/_4sdp"
            android:text="@string/no_hp"
            android:textSize="@dimen/_13ssp" />

        <ImageButton
            android:id="@+id/btnUpdate"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:contentDescription="@string/update"
            android:layout_centerInParent="true"
            android:background="@drawable/ic_edit"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_toEndOf="@id/txtNama"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>