<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorGreyLight"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="2dp"
    app:cardElevation="2dp"
    app:cardCornerRadius="5dp"
    app:cardPreventCornerOverlap="false"
    app:contentPadding="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_8sdp">

        <TextView
            android:id="@+id/txtNama"
            android:layout_width="@dimen/_175sdp"
            android:layout_height="@dimen/_21sdp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/_4sdp"
            android:text="@string/nama_user"
            android:textColor="@color/blacket"
            android:textSize="@dimen/_13ssp"
            android:maxLines="1"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/txtUsername"
            android:layout_width="@dimen/_175sdp"
            android:layout_height="@dimen/_21sdp"
            android:layout_below="@id/txtNama"
            android:layout_marginStart="@dimen/_4sdp"
            android:text="@string/username"
            android:textSize="@dimen/_12ssp" />

        <Button
            android:id="@+id/btnReset"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@id/txtNama"
            android:layout_marginStart="@dimen/_5sdp"
            android:textSize="@dimen/_12ssp"
            android:text="@string/reset" />

    </RelativeLayout>

</android.support.v7.widget.CardView>